--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ html, body{
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-color: #F9FAFB;
   
     display: flex;
     flex-direction: column;
@@ -75,22 +75,31 @@ main{
     position: relative;
 }
 
-.content{
-    height: 100vh;
-    width: 100%;
+.content {
     position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 iframe {
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 0;
     border: none;
     pointer-events: none;
-    z-index: 0;
 }
+
+.Earth_sea_image {
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    height: auto;
+}
+
 
 .test{
     width: 100%;
@@ -106,32 +115,30 @@ iframe {
 
 #rotateImage{
     display: block;
-    position: absolute;
     top: 0;
     
-    margin: auto;
-    margin-top: 10rem;
-    z-index: 22;
-    margin-left: 42rem;
     padding: 0;
+
+    
+    margin-left: 42rem;
+    z-index: 22;
+    
     transition: transform 0.5s ease;
 }
 
 #stillImage{
     display: block;
-    position: absolute;
     top: 0;
-    
     margin: auto;
-    z-index: 21;
-
     padding: 0;
+
     margin-left: 34.6rem;
-    margin-top: 9rem;
+    
+    z-index: 21;
 }
 
 .Earth_sea_image{
-    margin-left: -2%;
+    top: 0;
 }
 
 
@@ -139,7 +146,20 @@ iframe {
     transform: rotate(180deg);
 }
 
+.map{
+    margin: 5rem;
+    border: solid;
+
+}
+
+.mapImage{
+    width: 75%;
+    margin: auto;
+    margin-left: 25%;
+}
+
 footer{
+    display: block;
     background-color: grey;
     padding: 0.5rem;
 }
