--- a/css/index.css
+++ b/css/index.css
@@ -5,70 +5,72 @@
     font-style: normal;
 }
 
-html, body{
+html,
+body {
     height: 100%;
     margin: 0;
     padding: 0;
     background-color: #F9FAFB;
-  
+
     display: flex;
     flex-direction: column;
 }
 
 
-header{
-    background-color: grey;
+header {
+    background-color: rgb(133, 185, 198);
     position: sticky;
     top: 0;
     width: 100%;
 }
 
-nav ul{
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     margin-right: 2rem;
 }
 
-ul li{
+ul li {
     text-decoration: none;
     padding-top: 2rem;
+    font-size: 20px;
 }
 
-.NavText{
+.NavText {
     text-decoration: none;
     color: #ffffff;
     padding: 1rem;
     font-weight: bold;
 }
 
-.NavText:hover{
+.NavText:hover {
     text-decoration: underline;
 }
 
-nav ul li:not(:first-child){
+nav ul li:not(:first-child) {
     float: right;
-  }
-  
-  nav ul li img{
+}
+
+nav ul li img {
     float: left;
     padding: 0.5rem;
     margin-left: 0.5rem;
-  }
+}
 
 
-.navList{
+.navList {
     float: left;
 }
 
 
-.navLogoImage{
+.navLogoImage {
     width: 5rem;
 }
 
 
 
-main{
+main {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -101,7 +103,7 @@ iframe {
 }
 
 
-.test{
+.layer {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -109,58 +111,63 @@ iframe {
     background-color: black;
     opacity: 0.8;
     font-size: 2rem;
-    z-index: 1;   
+    z-index: 1;
 }
 
 
-#rotateImage{
-    display: block;
-    top: 0;
-    
-    padding: 0;
+.Earth_sea_image {
+    position: relative;
+    width: 100%;
+    /* S'adapte à la largeur du parent */
+    max-width: 400px;
+    /* Limite maximale (à adapter) */
+    margin: auto;
+    aspect-ratio: 1/1;
+    /* Carré, à adapter selon le ratio réel des images */
+    margin-top: 10%;
+}
 
-    
-    margin-left: 42rem;
-    z-index: 22;
-    
+.Earth_sea_image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* ou contain si tu veux tout voir */
+    padding: 0;
+    margin: 0;
+}
+
+#rotateImage {
+    z-index: 2;
     transition: transform 0.5s ease;
 }
 
-#stillImage{
-    display: block;
-    top: 0;
-    margin: auto;
-    padding: 0;
-
-    margin-left: 34.6rem;
-    
-    z-index: 21;
-}
-
-.Earth_sea_image{
-    top: 0;
+#stillImage {
+    z-index: 1;
 }
 
 
-#rotateImage:hover{
+
+#rotateImage:hover {
     transform: rotate(180deg);
 }
 
-.map{
+.map {
     margin: 5rem;
     border: solid;
 
 }
 
-.mapImage{
+.mapImage {
     width: 75%;
     margin: auto;
     margin-left: 25%;
 }
 
-footer{
+footer {
     display: block;
     background-color: grey;
     padding: 0.5rem;
 }
-
