--- a/css/index.css
+++ b/css/index.css
@@ -10,8 +10,6 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #F9FAFB;
-
     display: flex;
     flex-direction: column;
 }
@@ -22,7 +20,8 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000; /* pour rester au-dessus */
+    z-index: 1000;
+    /* pour rester au-dessus */
 }
 
 
@@ -76,7 +75,7 @@ main {
     flex: 1;
     display: flex;
     flex-direction: column;
-    position: relative;
+    
 }
 
 .content {
@@ -124,7 +123,7 @@ iframe {
     /*Change the size of the images here*/
     margin: auto;
     aspect-ratio: 1/1;
-    margin-top: 10%;
+    margin-top: 14%;
 }
 
 .Earth_sea_image img {
@@ -149,7 +148,6 @@ iframe {
 }
 
 
-
 #rotateImage:hover {
     transform: rotate(180deg);
 }
@@ -161,13 +159,28 @@ iframe {
     top: 28%;
     z-index: 2;
     width: 200px;
-    /* réduit la taille du conteneur */
     height: auto;
-    background-color: rgb(133, 185, 198);
+    background-color: rgba(133, 185, 198, 0.7);
     border: solid;
     border-color: #F9FAFB;
     border-radius: 20px;
+    transition: box-shadow 0.4s ease, transform 0.4s ease;
+    box-shadow: none;
 }
+
+.left-student:hover,
+.right-student:hover {
+    border-color: blue;
+    background-color: rgb(98, 174, 193);
+    box-shadow:
+        0 0 10px rgba(0, 183, 255, 1),
+        0 0 20px rgba(0, 183, 255, 0.8),
+        0 0 40px rgba(0, 183, 255, 0.6),
+        0 0 80px rgba(0, 183, 255, 0.4);
+    transform: scale(1.05);
+    transform: rotate(5deg);
+}
+
 
 .left-student {
     left: 1%;
@@ -175,8 +188,8 @@ iframe {
 
 .right-student {
     right: 1%;
-    transform: scaleX(-1);
 }
+
 
 .left-student img,
 .right-student img {
@@ -185,23 +198,29 @@ iframe {
     height: auto;
 }
 
+#HomeTitle {
+    position: absolute;
+    top: 12%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+    color: #ffffff;
 
-
-
-.map {
-    margin: 5rem;
+    width: 80%; /* Responsive width */
+    max-width: 600px; /* Optional max width */
+    padding: 1rem;
+    
+    background-color: #2C3E50;
     border: solid;
-
+    border-color: #F9FAFB;
+    border-radius: 20px;
+    text-align: center; /* Center text inside */
+    font-size: 1.9rem;  /* Responsive-friendly font size */
 }
 
-.mapImage {
-    width: 75%;
-    margin: auto;
-    margin-left: 25%;
-}
 
 footer {
-    display: block;
     background-color: grey;
     padding: 0.5rem;
+    margin: 0;
 }
