--- a/css/index.css
+++ b/css/index.css
@@ -75,7 +75,7 @@ main {
     flex: 1;
     display: flex;
     flex-direction: column;
-    
+
 }
 
 .content {
@@ -124,6 +124,10 @@ iframe {
     margin: auto;
     aspect-ratio: 1/1;
     margin-top: 14%;
+    border: solid;
+    border-color: white;
+    border-width: 2px;
+    border-radius: 20px;
 }
 
 .Earth_sea_image img {
@@ -145,6 +149,10 @@ iframe {
 
 #stillImage {
     z-index: 1;
+    border: solid;
+    border-color: white;
+    border-width: 2px;
+    border-radius: 20px;
 }
 
 
@@ -156,7 +164,7 @@ iframe {
 .left-student,
 .right-student {
     position: absolute;
-    top: 28%;
+    top: 30%;
     z-index: 2;
     width: 200px;
     height: auto;
@@ -206,18 +214,58 @@ iframe {
     z-index: 2;
     color: #ffffff;
 
-    width: 80%; /* Responsive width */
-    max-width: 600px; /* Optional max width */
+    width: 80%;
+    /* Responsive width */
+    max-width: 600px;
+    /* Optional max width */
     padding: 1rem;
-    
+
     background-color: #2C3E50;
     border: solid;
     border-color: #F9FAFB;
     border-radius: 20px;
-    text-align: center; /* Center text inside */
-    font-size: 1.9rem;  /* Responsive-friendly font size */
+    text-align: center;
+    /* Center text inside */
+    font-size: 1.9rem;
+    /* Responsive-friendly font size */
 }
 
+
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 10% auto;
+    padding: 2rem;
+    border: 1px solid #888;
+    border-radius: 16px;
+    width: 100%;
+    max-width: 1000px;
+    text-align: center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 2rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#worldImage{
+    width: 50%;
+}
 
 footer {
     background-color: grey;
