--- a/css/index.css
+++ b/css/index.css
@@ -182,8 +182,6 @@ iframe {
         0 0 20px rgba(0, 183, 255, 0.8),
         0 0 40px rgba(0, 183, 255, 0.6),
         0 0 80px rgba(0, 183, 255, 0.4);
-    transform: scale(1.05);
-    transform: rotate(5deg);
 }
 
 
@@ -191,10 +189,17 @@ iframe {
     left: 1%;
 }
 
+.left-student:hover {
+    transform: scale(1.05) rotate(-5deg);
+}
+
 .right-student {
     right: 1%;
 }
 
+.right-student:hover {
+    transform: scale(1.05) rotate(5deg);
+}
 
 .left-student img,
 .right-student img {
@@ -262,8 +267,36 @@ iframe {
 }
 
 footer {
-    background-color: rgb(55, 55, 55);
-    padding: 0.5rem;
-    margin: 0;
+    background-color: rgb(68, 67, 67);
     color: white;
+    padding: 0.5rem;
+    position: relative;
+    height: 150px; /* Adjust height as needed */
+}
+
+
+.footer-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.footer-bottom-right {
+    position: absolute;
+    bottom: 0.5rem;
+    right: 1rem;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+    margin: 0 0.5rem;
+}
+
+
+#logoEfrei {
+    width: 5rem;
+    height: auto;
 }
