--- a/css/Animals_and_Quiz/EarthLife.css
+++ b/css/Animals_and_Quiz/EarthLife.css
@@ -337,3 +337,66 @@ button, input[type="button"], input[type="submit"], input[type="file"] {
     text-align: center;
 }
 
+
+form {
+    width: 60%;
+    margin: 50px auto 50px auto;
+    background-color: #f9f9f9;
+    padding: 10px;
+    border: 2px solid #2e7d32;
+    border-radius: 8px;
+}
+
+fieldset {
+    border: 1px solid #2e7d32;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+fieldset legend {
+    padding: 5px 10px;
+    background-color: #2e7d32;
+    color: white;
+    border-radius: 8px;
+}
+
+.questions {
+    margin: 10px 0;
+    list-style: none;
+}
+
+label, input {
+    display: inline-block;
+    width: 30%;
+}
+label {
+    font-weight: bold;
+}
+
+.questions label, .questions input {
+    font-weight: inherit;
+    display: initial;
+    width: inherit;
+}
+
+input[type="text"], input[type="email"], input[type="date"], select{
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-top : 10px;
+    border: 1px solid #2e7d32;
+    border-radius: 8px;
+}
+
+
+#result{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.quiz{
+    display: none;
+}
+
+button{
+    display: none;
+}
