--- a/css/index.css
+++ b/css/index.css
@@ -269,8 +269,10 @@ iframe {
     width: 100%;
     max-width: 850px;
     margin: 0 auto;
-    
+    border: solid;
+    border-radius: 5px;
     margin-top: 4%;
+    padding: 5px;
 }
 
 #worldImage {
