--- a/css/about.css
+++ b/css/about.css
@@ -16,34 +16,66 @@ body {
 }
 
 
+/* --------------- Header Styles --------------- */
 header {
     background-color: rgb(133, 185, 198);
-    position: sticky;
+    position: fixed;
     top: 0;
     width: 100%;
-}
-
-nav ul {
+    z-index: 1000;
+  }
+  
+  /* Navigation container */
+  nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: center;
     margin-right: 2rem;
-}
-
-ul li {
+  }
+  
+  /* Each list item */
+  nav ul li {
+    padding: 1rem 1.5rem;
+    font-size: 20px;
+    transition: background-color 0.3s ease;
+  }
+  
+  /* Hover effect on the entire li block */
+  nav ul li:hover {
+    background-color: #8BC34A;
+  }
+  
+  /* Navigation text */
+  .NavText {
     text-decoration: none;
-    padding-top: 2rem;
-}
+    color: #ffffff;
+    font-weight: bold;
+    display: block;
+  }
+  
+  /* Logo image */
+  nav ul li img {
+    float: left;
+    padding: 0.5rem;
+    margin-left: 0.5rem;
+  }
+  
+  /* Logo container */
+  .navLogoImage {
+    width: 4.3rem;
+  }  
 
 .NavText {
     text-decoration: none;
     color: #ffffff;
     padding: 1rem;
+    font-family: poppins, sans-serif;
     font-weight: bold;
-}
-
-.NavText:hover {
-    text-decoration: underline;
+    font-size: medium;
 }
 
 nav ul li:not(:first-child) {
@@ -66,55 +98,7 @@ nav ul li img {
     width: 5rem;
 }
 
-/* -------- CSS for the footer -------- */
-
-footer {
-    background-color: rgb(68, 67, 67);
-    color: white;
-    padding: 1rem 2rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-end;
-    text-align: center;
-}
-
-.footer-left,
-.footer-center,
-.footer-right {
-    flex: 1 1;
-    margin: 0.5rem 0;
-}
-
-.footer-left {
-    display: flex;
-    justify-content: flex-start;
-}
-
-.footer-center {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 1rem;
-}
-
-.footer-right {
-    display: flex;
-    justify-content: flex-end;
-}
-
-footer a {
-    color: white;
-    text-decoration: none;
-    font-size: 1rem;
-}
-
-#logoEfrei {
-    width: 4rem;
-    height: auto;
-}
-
-/*---------------------------------------------*/
+/* --------------- Main Content Styles --------------- */
 
 main {
     font-family: poppins, sans-serif;
