--- a/css/about.css
+++ b/css/about.css
@@ -79,25 +79,40 @@ header {
     width: 5rem;
   }
   
-  /* Responsive adjustments to devices */
-  @media (max-width: 768px) {
+@media (max-width: 768px) {
+    body {
+        padding-top: 50px; /* adjust based on the actual mobile header height */
+    }
+
     nav ul {
-      flex-direction: column;
-      align-items: flex-start;
-      background-color: rgb(133, 185, 198);
-      padding: 1rem;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0;
+        background-color: rgb(133, 185, 198);
     }
-  
+
     nav ul li {
-      width: 100%;
-      text-align: left;
-      padding: 0.75rem 1rem;
+        flex: 1;
+        text-align: center;
+        padding: 1rem 0;
+        box-sizing: border-box;
     }
-  
+
+    nav ul li a {
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+
     .navLogoImage {
-      width: 4rem;
+        width: 4rem;
     }
-  }
+}
+
+
   
 
 /* -------- footer -------- */
