--- a/css/index.css
+++ b/css/index.css
@@ -236,6 +236,16 @@ iframe {
     height: auto;
 }
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 #HomeTitle {
     position: absolute;
     top: 12%;
@@ -257,6 +267,10 @@ iframe {
     font-family: poppins, sans-serif;
     text-align: center;
     font-size: 1.9rem;
+
+    /* Animation for the title */
+    animation-name: fadeIn;
+    animation-duration: 5s;
 }
 
 
@@ -280,9 +294,7 @@ iframe {
     border: 1px solid #888;
     border-radius: 16px;
     width: 100%;
-    height: 80%;
-    max-width: 1000px;
-    max-height: 1000px;
+    max-width: 70%;
     text-align: center;
 }
 
@@ -311,11 +323,24 @@ iframe {
     display: block;
 }
 
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 /* ------- CSS for the pin ------- */
 .pins {
     position: absolute;
-    width: 60px;
-    z-index: 2;
+    width: 75px;
+    z-index: 1;
+    animation-name: rotate;
+    animation-duration: 5s;
+    
 }
 
 .pin_container {
@@ -339,7 +364,7 @@ iframe {
     font-size: 0.6rem;
     color: #000;
     padding: 0.3rem;
-    z-index: 1000;
+    z-index: 2000;
 }
 
 .pin-info-box img {
@@ -363,8 +388,7 @@ iframe {
             #85b9c6,
             #5be838,
             #8bc34a,
-            #85b9c6
-        );
+            #85b9c6);
     background-size: 600% 600%;
     border-radius: 15px;
     z-index: -1;
@@ -424,7 +448,7 @@ iframe {
 }
 
 #pin_container_3 {
-    top: 40%;
+    top: 30%;
     left: 70%;
 }
 
@@ -439,12 +463,42 @@ iframe {
 }
 
 #pin_container_4 {
-    top: 70%;
-    left: 82%;
+    top: 55%;
+    left: 78%;
 }
 
 
 /*--------------------------------*/
+
+@keyframes textGradiant {
+    0% {
+        color: #85b9c6;
+    }
+    25% {
+        color: #7cc1d2;
+    }
+
+    50% {
+        color: #5be838;
+    }
+
+    100% {
+        color: #8bc34a;
+    }
+}
+
+#modalText {
+    font-family: poppins;
+    font-size: 2rem;
+    color: black;
+    text-align: center;
+    margin-top: 1.5rem;
+    animation-name: textGradiant;
+    animation-iteration-count: infinite;
+    animation-duration: 2s;
+}
+
+
 
 #ExplorationImg {
     width: 45%;
