--- a/css/Animals_and_Quiz/SeaAnimals.css
+++ b/css/Animals_and_Quiz/SeaAnimals.css
@@ -231,8 +231,8 @@ footer a {
 }
 
 .article p {
-    color: #555;
-    line-height: 1.6;
+    color: black;
+    line-height: 1.2;
     font-size: 1rem;
 }
 
