--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,13 @@
-@font-face {
+/* CSS for the main page of the website */
+@font-face { 
     font-family: "poppins";
     src: url("../fonts/poppins.regular.ttf");
     font-weight: normal;
     font-style: normal;
-}
+} /* Font that we will use */ 
 
-html,
+/* CSS for the entire page */
+html, 
 body {
     height: 100%;
     margin: 0;
@@ -62,7 +64,7 @@ nav ul li img {
     margin-left: 0.5rem;
 }
 
-
+/* Navigation text */
 .NavText {
     text-decoration: none;
     color: #ffffff;
@@ -73,6 +75,7 @@ nav ul li img {
     font-size: 1.5rem;
 }
 
+/* Align the first list item to the left */
 nav ul li:not(:first-child) {
     float: right;
 }
@@ -82,18 +85,19 @@ nav ul li img {
     margin-left: 0.5rem;
 }
 
-
+/* Align the first list item to the left */
 .navList {
     float: left;
 }
 
-
+/* Logo image */
 .navLogoImage {
     width: 5rem;
 }
 
 /* --------------- Main Content Styles --------------- */
 
+/* Main container */
 main {
     flex: 1;
     display: flex;
@@ -101,6 +105,7 @@ main {
     margin-top: 3%;
 }
 
+/* Content area */
 .content {
     position: relative;
     width: 100%;
@@ -108,6 +113,7 @@ main {
     overflow: hidden;
 }
 
+/* Background video */
 iframe {
     position: absolute;
     top: 0;
@@ -119,6 +125,7 @@ iframe {
     pointer-events: none;
 }
 
+/* Earth sea image */
 .Earth_sea_image {
     position: relative;
     z-index: 1;
@@ -126,7 +133,7 @@ iframe {
     height: auto;
 }
 
-
+/* Layer for the dark overlay */
 .layer {
     width: 100%;
     height: 100%;
@@ -138,7 +145,7 @@ iframe {
     z-index: 1;
 }
 
-
+/* Earth sea image container */
 .Earth_sea_image {
     position: relative;
     width: 100%;
@@ -152,6 +159,7 @@ iframe {
     border-radius: 20px;
 }
 
+/* Image inside the container */
 .Earth_sea_image img {
     position: absolute;
     top: 0;
@@ -163,11 +171,13 @@ iframe {
     margin: 0;
 }
 
+/* Image rotation effect */
 #rotateImage {
     z-index: 2;
     transition: transform 0.5s ease;
 }
 
+/* Still image */
 #stillImage {
     z-index: 1;
     border: solid;
@@ -176,12 +186,12 @@ iframe {
     border-radius: 20px;
 }
 
-
+/* Rotate image on hover */
 #rotateImage:hover {
     transform: rotate(180deg);
 }
 
-
+/* Student images on the left and right sides */
 .left-student,
 .right-student {
     position: absolute;
@@ -197,6 +207,7 @@ iframe {
     box-shadow: none;
 }
 
+/* Hover effect for student images */
 .left-student:hover,
 .right-student:hover {
     border-color: blue;
@@ -208,29 +219,34 @@ iframe {
         0 0 80px rgba(0, 183, 255, 0.4);
 }
 
-
+/* Positioning the student images */
 .left-student {
     left: 1%;
 }
 
+/* Hover effect for left student image */
 .left-student:hover {
     transform: scale(1.05) rotate(-5deg);
 }
 
+/* Positioning the right student image */
 .right-student {
     right: 1%;
 }
 
+/* Hover effect for right student image */
 .right-student:hover {
     transform: scale(1.05) rotate(5deg);
 }
 
+/* Image inside the student containers */
 .left-student img,
 .right-student img {
     width: 100%;
     height: auto;
 }
 
+/* Animation for the title */
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -241,18 +257,21 @@ iframe {
     }
 }
 
+/* Title in the center of the page */
 #HomeTitle {
+    /* Positioning the title */
     position: absolute;
     top: 12%;
     left: 50%;
+    /* Centering the title */
     transform: translateX(-50%);
+    /* Styling the title */
     z-index: 2;
+    /* Text properties */
     color: #ffffff;
 
     width: 80%;
-    /* Responsive width */
     max-width: 600px;
-    /* Optional max width */
     padding: 1rem;
 
     background-color: #2C3E50;
@@ -269,7 +288,7 @@ iframe {
 }
 
 
-
+/* Modal styles */
 .modal {
     display: none;
     position: fixed;
@@ -282,6 +301,7 @@ iframe {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+/* Modal content */
 .modal-content {
     background-color: #fefefe;
     margin: 5% auto;
@@ -293,6 +313,7 @@ iframe {
     text-align: center;
 }
 
+/* Close button */
 .close {
     color: #aaa;
     float: right;
@@ -301,6 +322,7 @@ iframe {
     cursor: pointer;
 }
 
+/* Close button hover effect */
 .image_container {
     position: relative;
     width: 100%;
@@ -312,12 +334,14 @@ iframe {
     padding: 5px;
 }
 
+/* Image inside the container */
 #worldImage {
     width: 100%;
     height: auto;
     display: block;
 }
 
+/* Animation for the pin */
 @keyframes rotate {
     0% {
         transform: rotate(0deg);
@@ -465,6 +489,7 @@ iframe {
 
 /*--------------------------------*/
 
+/* Animation for the text gradient */
 @keyframes textGradiant {
     0% {
         color: #85b9c6;
@@ -483,6 +508,7 @@ iframe {
     }
 }
 
+/* Modal text */
 #modalText {
     font-family: poppins;
     font-size: 2rem;
@@ -494,8 +520,7 @@ iframe {
     animation-duration: 2s;
 }
 
-
-
+/* -------- CSS for the exploration section -------- */
 #ExplorationImg {
     width: 45%;
 }
